# apical-app

./: .gitignore  vercel.json
.github/workflows/: desktop-release.yml
download/: manifest.json
my-project-temp/: .env.example  .gitignore  eslint.config.mjs  keep-alive.sh  next.config.ts  package-lock.json  package.json  vercel.json  worklog.md
my-project-temp/.backup-old-frontend/: AuthDialog-old.tsx
my-project-temp/.zscripts/: patch-agents-view.py  process-logo.py  rebuild-agents-view.py  replace-chatpane.py  replace-senddo.py
my-project-temp/agent-ctx/: 3-main-agent.md  5-backend-api-routes.md  8-supabase-integration.md
my-project-temp/db/: custom.db
my-project-temp/download/: manifest.json
my-project-temp/mini-services/apical-mcp/: index.ts  (+2 more)
my-project-temp/prisma/: schema.prisma  seed-oauth.ts  seed.ts
my-project-temp/scripts/: copy-standalone-assets.mjs  create-mac-dmg.sh  ensure-dev-server.sh  ensure-prod-server.sh  fetch-node-sidecar.sh  generate-brand-icons.mjs  generate-globals-tauri-css.mjs  package-desktop.sh  prepare-tauri-bundle.sh
my-project-temp/src/: middleware.ts
my-project-temp/src-tauri/: Cargo.toml  README.md  tauri.conf.json
my-project-temp/src-tauri/.cargo/: config.toml
my-project-temp/src-tauri/capabilities/: default.json  remote-dev.json
my-project-temp/src-tauri/icons/: icon.icns
my-project-temp/src-tauri/src/: lib.rs  main.rs
tool-results/: bash_1782254799980_973d9c44a8a2.txt  read_1782175988015_204b96b21b68.txt  read_1782176021416_e3638864f76c.txt  read_1782176079598_2f29e41a38eb.txt
upload/: apical-app (3).tar
(+332 files in other folders)
